--- a/.github/workflows/status_check.yml
+++ b/.github/workflows/status_check.yml
@@ -2,7 +2,7 @@ name: Update API Status
 
 on:
   schedule:
-    - cron: '0 */6 * * *'  # Run every 6 hours
+    - cron: '0 0 * * *'  # Run every day
   workflow_dispatch:
 
 jobs:
