--- a/.github/workflows/status_check.yml
+++ b/.github/workflows/status_check.yml
@@ -30,6 +30,6 @@ jobs:
       run: |
         git config user.name "${{ github.actor }}"
         git config user.email "${{ github.actor }}@users.noreply.github.com"
-        git add api_status.json
+        git add status.json
         git commit -m "Update API status [skip ci]"
         git push
