first basic rust implementation

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,4 @@
 {
     "version": 2,
-    "builds": [
-      { "src": "main.py", "use": "@vercel/python" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "/main.py" }
-    ],
-    "env": {
-      "APP_MODULE": "main:app"
-    }
+    "buildCommand": "cargo run"
   }
