updated vercel.json to cache requests for 3 days

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,29 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "main.py", "use": "@vercel/python" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "/main.py" }
-    ],
-    "env": {
-      "APP_MODULE": "main:app"
+  "version": 2,
+  "builds": [
+    {
+      "src": "main.py",
+      "use": "@vercel/python"
     }
-  }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/main.py"
+    }
+  ],
+  "env": {
+    "APP_MODULE": "main:app"
+  },
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "s-maxage=259200"
+        }
+      ]
+    }
+  ]
+}
